# AAC-Highway

./: .gitignore  LICENSE  README.md  Tasks.md  USAGE.md  hyperparams.json  pyproject.toml  requirements.txt  test-env.py  test_render.py
aac_highway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
comparison_reports/: overall_summary.csv  overall_summary.md  test_1M_summary.csv  test_1M_summary.md  test_200k_summary.csv  test_200k_summary.md  test_500k_summary.csv  test_500k_summary.md
docs/: HIGHWAY_ENV_PARAMETERS.md  curriculum_learning_guide.md  official_plr_guide.md  presentation_01_introduction.md  presentation_02_baselines.md  presentation_03_curriculum_overview.md  presentation_04_PLR.md  presentation_05_ACCEL.md  presentation_06_results.md  presentation_07_issues_future.md
highway_dqn/: best_model_info.json
logs/: training_history_20260120_171715.json  training_history_20260121_110121.json
mia_eval/: comparison_summary.json
plr_dqn/: __init__.py  dqn.py  evaluate.py  highway_levels.py  level_sampler.py  level_store.py  model.py  plr_configs.py  storage.py  train.py
src/: aggregate_comparisons.py  aggressive_vehicle.py  analyze_results.py  baseline_results.csv  compare_models.py  diagnose_exploration.py  dqn_accel.py  dqn_baseline.py  dqn_plr.py  feature_extractors.py  hyperparameter_tuner.py  interactive_tester.py  interactive_viewer.py  metrics_tracker.py  plr.py  plr_configs.py  plr_implementation.py  ppo_baseline.py  ppo_plr.py  qrdqn_plr.py  quick_test.py  run_metrics_batch.py  test_exploration.py  test_render.py  (+1 more)
test_1M/: ppo.json  (+4 more)
(+6049 files in other folders)
